--- a/style.css
+++ b/style.css
@@ -31,6 +31,11 @@ body{
     top: 10px;
     left: 50%;
     transform: translateX(-50%);
+    color: #fff;
+    text-shadow: 2px 2px #000;
+    background-color: rgb(41, 107, 85);
+    border: 2px solid rgb(255, 255, 255);
+    border-radius: 20px;
 }
 
 #startButton{
